--- a/app/templates/shop/partials/paypal-success.html
+++ b/app/templates/shop/partials/paypal-success.html
@@ -4,7 +4,7 @@
             <h2 class="text-center">{{ Payment.order.customerName }}</h2>
             <hr>
             <div class="col-md-6">
-                <h2 class="text-left">Gracias por su compra. Moons.</h2>
+                <h2 class="text-left">Gracias por su compra.</h2>
             </div>
         </div>
     </div>
