--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -764,3 +764,15 @@ figure.effect-sadie:hover p, figure.effect-sadie:hover a
     color white !important    
     font-size 12px
 
+.offer-price
+  color danger
+  padding 0
+  height auto
+  margin-bottom 0
+  font-weight bold
+.old-price
+  text-decoration line-through
+  height auto
+  padding 0
+  margin-bottom 0
+
