--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1107,6 +1107,19 @@ figure.effect-sadie:hover a {
   color: #fff !important;
   font-size: 12px;
 }
+.offer-price {
+  color: #ff4b4b;
+  padding: 0;
+  height: auto;
+  margin-bottom: 0;
+  font-weight: bold;
+}
+.old-price {
+  text-decoration: line-through;
+  height: auto;
+  padding: 0;
+  margin-bottom: 0;
+}
 .block-ui-overlay {
   width: 100%;
   height: 100%;
