--- a/app/templates/partials/box-product.html
+++ b/app/templates/partials/box-product.html
@@ -7,22 +7,22 @@
     </div>
     <div class="box-container">
         <div class="row align-items-center">
-            <div class="col-sm-12">
+            <div ng-class="product.offerPrice > 0 ? 'col-sm-12': 'col-sm-8'">
                 <p class="box-title">{{ product.name | limitTo:40}}</p>
             </div>
-            <div class="col-sm-12 no-padding">
+            <div ng-class="product.offerPrice > 0 ? 'hide': 'col-sm-4'">
+                <p>{{ product.price | currency }}</p>
+            </div>
+            <div class="col-sm-12 no-padding" ng-if="product.offerPrice > 0">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 no-pd-r">
                             <!--Offert price-->
-                            <p class="offer-price">$200.00</p>
+                            <p class="offer-price" ng-if="product.offerPrice > 0">{{ product.offerPrice | currency }}</p>
                         </div>
                         <div class="col-sm-6 text-right">
                                 <!--old price-->
-                            <p class="old-price">{{ product.price | currency }}</p>
-                            <!--first price (price normal)
-                            <p class="price">{{ product.price | currency }}</p>
-                            -->
+                            <p class="old-price" ng-if="product.offerPrice > 0">{{ product.price | currency }}</p>
                         </div>
                     </div>    
                 </div>
