fix go to top in categories

--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -15,8 +15,8 @@
         </div>
     </section>
     <section class="content-area">
-        <div class="container" loading-container="Product.tableParams.settings().$loading">
-            <div class="row" ng-table="Product.tableParams" show-filter="false">
+        <div class="container" loading-container="tableParams.settings().$loading" id="top">
+            <div class="row" ng-table="tableParams" show-filter="false">
                 <div class="col-sm-3">
                     <div class="box-widget-white ng-scope">
                         <div class="box-widget-container">
