new support for multiplePrices

--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -56,7 +56,7 @@
                                         qty: Product.detail.qty, taxonomies : Product.detail.taxonomies,
                                          shipmentPrice: Product.detail.shipmentPrice, typeTax: Product.detail.typeTax,
                                           stock: Product.detail.inventory, offerPrice: Product.detail.offerPrice,
-                                           priceList: Product.detail.priceList},
+                                           priceList: Product.detail.priceList, prices: Product.detail.prices},
                                            Product.detail.qty)"
                                             ng-disabled="Shop.itemInCart(Product.detail.id)|| FormQty.$invalid || Product.detail.inventory <= 0"
                                             class="btn btn-optional"> <i class="fa fa-shopping-cart"></i>Agregar a carrito
