fix filters on categories

--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -147,7 +147,7 @@
                                                    ng-model="Product.optionSelected"
                                                    data-md-container-class="selectdemoSelectHeader"
                                                    name="options"
-                                                   ng-change="Product.tableParams.reload(Product.selectFilter   )"
+                                                   ng-change="tableParams.reload(Product.selectFilter   )"
                                                    aria-label="Opciones de ordenamiento">
                                             <md-option ng-value="option"
                                                        ng-repeat="option in Product.filterOrderingOptions">
