--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -21,29 +21,61 @@
                 </div>
                 <div class="col-md-12">
                     <h4><i class="fa fa-map-marker"></i>{{Payment.sendOptions === "0" ? ' Seleccionar dirección existente' :
-                        ' Dinos cual es tu direccion y mostrar las tiendas más cercanas a ti'}}</h4>
+                        ' Dinos cual es tu direccion y te mostraremos las tiendas más cercanas a ti'}}</h4>
                     <hr>
                     <ng-include src="'/templates/shop/shipping-address.html'"></ng-include>
                     
-                    <div ng-if="Payment.cart.metadata.shipment">
+                    <div ng-if="Payment.cart.metadata.shipment && Payment.sendOptions === '0'">
                         <h6>Detalles del envío</h6>
                         <p>Envío {{ Payment.cart.metadata.shipment.servicelevel}} por <strong>{{Payment.cart.metadata.shipment.provider}}</strong> de {{Payment.cart.metadata.shipment.duration_terms}}</p>
                     </div>
 
-                    <button ng-if="Payment.address && Payment.sendOptions === '0'" class="btn btn-danger" type="submit"
+                    <div ng-if="Payment.cart.metadata.shipments && Payment.sendOptions === '0'">
+                        <h6>Selecciona el servicio de paqueteria</h6>
+                        <uib-tabset class="tab-simple" justified="true" active="Payment.activeTab">
+                            <uib-tab index="0" heading="Servicios Estandar" select="Payment.changeTabServicelevel()">
+                                <md-radio-group ng-model="Payment.providerRate" ng-change="Payment.setProvider()">
+                                    <div ng-repeat="provider in Payment.cart.metadata.shipments | filter : { servicelevel : 'estandar' }">
+                                        <md-radio-button class="md-primary" ng-value="provider"> 
+                                            <span class="fa fa-truck">
+                                                {{ provider.provider }} {{provider.servicelevel}} - {{ provider.duration_terms }} - <strong>{{provider.amount | currency}}</strong>
+                                            </span>
+                                        </md-radio-button>
+                                    </div>
+                                </md-radio-group>
+                            </uib-tab>
+                            <uib-tab index="1" heading="Servicios Express" select="Payment.changeTabServicelevel()">
+                                <md-radio-group ng-model="Payment.providerRate" ng-change="Payment.setProvider()">
+                                    <div ng-repeat="provider in Payment.cart.metadata.shipments | filter : { servicelevel : 'express' }" >
+                                        <md-radio-button class="md-primary" ng-value="provider"> 
+                                            <span class="fa fa-truck">
+                                                {{ provider.provider }} {{provider.servicelevel}} - {{ provider.duration_terms }} - <strong>{{provider.amount | currency}}</strong>
+                                            </span>
+                                        </md-radio-button>
+                                    </div>
+                                </md-radio-group>
+                            </uib-tab>
+                        </uib-tabset>
+                    </div>
+                    <br>
+                    <button ng-if="Payment.address && Payment.sendOptions === '0' && Payment.providerRate" class="btn btn-danger" type="submit"
                             ng-disabled="!Payment.address"
                             ng-click="Payment.saveShippingAddress()">Continuar
                     </button>
                     <br>
 
-                    <p ng-if="Payment.address && Payment.sendOptions === '1'">{{Payment.defaultbranchOffice.metadata.codeGetShop ? 'Puedes recorger tu pedido en estas tiendas':
-                        'Lo sentimos pero por tu ubucación no es posible recoger en tienda, por favor selecciona otra forma de envio '}}</p>
+                    <p ng-if="Payment.validRetriveInStore && Payment.sendOptions === '1'">
+                        Puedes recorger tu pedido en estas tiendas
+                    </p>
+                    <p ng-if="!Payment.validRetriveInStore && Payment.sendOptions === '1' && Payment.address">
+                        Lo sentimos pero por tu ubucación no es posible recoger en tienda, por favor selecciona otra forma de envio
+                    </p>
 
                     <div class="col-xs-12 col-sm-12 col-md-12"
-                         ng-if="Payment.address && Payment.sendOptions === '1' && Payment.defaultbranchOffice.metadata.codeGetShop">
+                         ng-if="Payment.validRetriveInStore">
                         <md-input-container>
                             <label for="shop">Selecciona la tienda para recoger tu pedido</label>
-                            <md-select ng-model="Payment.shop" id="shop" name="shop" title="Direccion">
+                            <md-select ng-model="Payment.shop" id="shop" name="shop" title="Direccion" required>
                                 <md-option ng-repeat="shop in Payment.defaultbranchOffice.metadata.addressGetShop.array"
                                            ng-value="shop">
                                     {{ shop }}
@@ -232,7 +264,7 @@
                     <div class="col-md-12" style="margin-top: 30px;"
                          ng-if="Payment.sendOptions === '1' && Payment.addresses.length > 0 && Payment.defaultbranchOffice.metadata.codeGetShop">
                         <button class="btn btn-danger" type="button"
-                                ng-disabled="Form.$invalid" ng-click="Payment.retriveInStore()">Continuar y recoger en
+                                ng-disabled="Form.$invalid || !Payment.validRetriveInStore || !Payment.shop" ng-click="Payment.retriveInStore()">Continuar y recoger en
                             tienda
                         </button>
                     </div>
