ajuste de estilo en imagenes y css

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -177,8 +177,9 @@
       color fontClr !important
   .box-header
     .box-bg-img
-      background-position center
-      background-size cover
+      background-position bottom
+      background-repeat no-repeat
+      background-size contain
       height 300px
   .box-container
     text-align center
