--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -94,7 +94,8 @@
     > li > .shopping-cart
       padding-right 0
   .navbar-brand .logo
-    width 120px
+    width 200px
+    padding 10px 0
 
 /* header three rows style */
 .three-rows-nav
