--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 <div class="text-center bottom-footer">
-    <p class="white">© 2019 Lady Paola, Todos los Derechos Reservados.</p>
+    <p class="white">© 2019 <strong>Calzalia.mx</strong>, Todos los Derechos Reservados.</p>
 </div>
 
     
