ajuste de estilo

--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -6,7 +6,7 @@
                     <h2>{{Product.detail.name}}</h2>
                 </div>
                 <div class="col-sm-6">
-                    <div class="wrapper" style="width: 300px; height: auto; ">
+                    <div class="wrapper" style="width: 100%; height: auto; ">
                         <img class="img-responsive" src="{{Product.detail.featuredImage.url}}"
                              wip-image-zoom="Product.detail.optionsZoom">
                     </div>
