--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -23,8 +23,8 @@
                 <div class="col-lg-3 col-md-6 col-sm-6 mobile-hidde" ng-controller="AccessCtrl as Access">
                     <ul class="navbar-nav navbar-expand-lg justify-content-end ">
                         <li class="nav-item">
-                            <a href="mailto:ventas@ladypaolamayoreo.com.mx" class="nav-link">
-                               <i class="fa fa-envelope"></i> ventas@ladypaolamayoreo.com.mx
+                            <a href="contacto@calzalia.mx" class="nav-link">
+                               <i class="fa fa-envelope"></i> contacto@calzalia.mx
                             </a>
                         </li>
                     </ul>
