--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="title-middle-line">
                 <div class="text-content">
-                    <h3 class="font-type">Arma tu pedido</h3>
+                    <h3 class="font-type">Temporada Otoño Invierno</h3>
                 </div>
                 <hr>
             </div>
