ajuste de estilo

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -45,7 +45,7 @@
     <section class="section-one">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4" ng-repeat="item in Home.categoryProd">
+                <div class="col-sm-4" ng-repeat="item in Home.infoShipping">
                     <figure class="snip1190">
                         <div class="img-caption"
                              style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default}}');"></div>
